--- a/Random-Testimonial/index.html
+++ b/Random-Testimonial/index.html
@@ -44,5 +44,19 @@
 	<p>Copyright © National Association to Promote Siestas</p>
 </footer>
 
+<script>
+
+let quotesArray = ['NAPS is by far the most significant cultural force of the decade. — New York Times',
+'These days sleeping at your desk is not just acceptable, its encouraged. — The Atlantic',
+'NAPS has changed the way people think about sleep, on a grand scale. — Washington Post',
+'Happiness increased 200% since NAPS began promoting siestas. — National Science Review',
+'NAPS has ushered in a new era of sleep. — USA Today',
+'Not surprisingly, more siestas means more productivity. — Wall Street Journal',
+'NAPS is doing the hard work of helping people get the rest they need. — U.S. News']
+
+let randomNumber = Math.floor(Math.random() * quotesArray.length) //generates random number between 0 and 6 which I will use to cover all items on the array. Stores this value in a variable called randomNumber
+document.getElementById('press-quote').textContent = quotesArray[randomNumber] // The site takes the text content of 'press quote' element and changes the text content to one of the items in the quotesArray using a randomNumber as the index selector. We created the variable randomNumber which is equal to a number rounded to the floor and multiplied with the lenght of the quotesArray which is 0-6. The atarting value of the list is 0
+</script>
+
 </body>
 </html>
