--- a/Random-Testimonial/index.html
+++ b/Random-Testimonial/index.html
@@ -18,8 +18,8 @@
 				<li><a href="#">Press</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
+		</div>
 		</nav>
-	</div>
 </header>
 
 <div class="hero">
@@ -55,8 +55,8 @@ let quotesArray = ['NAPS is by far the most significant cultural force of the de
 'NAPS is doing the hard work of helping people get the rest they need. — U.S. News']
 
 let randomNumber = Math.floor(Math.random() * quotesArray.length) //gen ran num for quotes
-		document.getElementById('press-quote').textContent = '"'+ quotesArray[randomNumber].split('—')[0] +'"' +' —'+ quotesArray[randomNumber].split('—')[1]// change the textContent of the press-quote element to one of the items in the quotes array using random number as the index selector
-console.log(quotesArray[randomNumber].split('—'))
+		document.getElementById('press-quote').textContent = '“'+ quotesArray[randomNumber].split('—')[0] +'”' +' —'+ quotesArray[randomNumber].split('—')[1]// change the textContent of the press-quote element to one of the items in the quotes array using random number as the index selector
+//console.log(quotesArray[randomNumber].split('—')[0])
 </script>
 
 </body>
